--- a/Botorch/closed_loop_botorch_only.ipynb
+++ b/Botorch/closed_loop_botorch_only.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -114,7 +114,57 @@
         "originalKey": "41db1652-96c8-468d-9913-20a8e78f6fd6",
         "requestMsgId": "f83596cc-c30d-43ca-b9a1-fa3f5ad6b4ad"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "torch.Size([10, 6])\n",
+            "torch.Size([10, 1])\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "(tensor([[0.1616, 0.1947, 0.1982, 0.1060, 0.1460, 0.2284],\n",
+              "         [0.3239, 0.4909, 0.1419, 0.0535, 0.3530, 0.4780],\n",
+              "         [0.7939, 0.6577, 0.9102, 0.2894, 0.3113, 0.1051],\n",
+              "         [0.7673, 0.7687, 0.0898, 0.3499, 0.7251, 0.9810],\n",
+              "         [0.3363, 0.5822, 0.2294, 0.7508, 0.2236, 0.3330],\n",
+              "         [0.1278, 0.9441, 0.5743, 0.4374, 0.2045, 0.6184],\n",
+              "         [0.7431, 0.7622, 0.3138, 0.5811, 0.3623, 0.1494],\n",
+              "         [0.9689, 0.3460, 0.8791, 0.1136, 0.4456, 0.8762],\n",
+              "         [0.4442, 0.3479, 0.6486, 0.6569, 0.5947, 0.9319],\n",
+              "         [0.9993, 0.7964, 0.2331, 0.8706, 0.6913, 0.1228]], device='cuda:0',\n",
+              "        dtype=torch.float64),\n",
+              " tensor([[ 0.3867],\n",
+              "         [ 0.5505],\n",
+              "         [ 0.4715],\n",
+              "         [-0.0277],\n",
+              "         [ 0.3916],\n",
+              "         [ 0.0080],\n",
+              "         [ 0.2249],\n",
+              "         [ 0.8757],\n",
+              "         [ 0.5221],\n",
+              "         [-0.3602]], device='cuda:0', dtype=torch.float64),\n",
+              " tensor([[-1.9994],\n",
+              "         [-1.5148],\n",
+              "         [-0.1984],\n",
+              "         [ 0.3699],\n",
+              "         [-0.4807],\n",
+              "         [-0.7470],\n",
+              "         [ 0.0948],\n",
+              "         [-0.3413],\n",
+              "         [ 1.0600],\n",
+              "         [ 0.6679]], device='cuda:0', dtype=torch.float64),\n",
+              " 0.7687477919897526)"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "from botorch.models import FixedNoiseGP, ModelListGP\n",
         "from gpytorch.mlls.sum_marginal_log_likelihood import SumMarginalLogLikelihood\n",
@@ -126,7 +176,9 @@
         "def generate_initial_data(n=10):\n",
         "    # generate training data\n",
         "    train_x = torch.rand(10, 6, device=device, dtype=dtype)\n",
+        "    print(train_x.shape)\n",
         "    exact_obj = neg_hartmann6(train_x).unsqueeze(-1)  # add output dimension\n",
+        "    print(exact_obj.shape)\n",
         "    exact_con = outcome_constraint(train_x).unsqueeze(-1)  # add output dimension\n",
         "    train_obj = exact_obj + NOISE_SE * torch.randn_like(exact_obj)\n",
         "    train_con = exact_con + NOISE_SE * torch.randn_like(exact_con)\n",
@@ -148,7 +200,8 @@
         "    # load state dict if it is passed\n",
         "    if state_dict is not None:\n",
         "        model.load_state_dict(state_dict)\n",
-        "    return mll, model"
+        "    return mll, model\n",
+        "generate_initial_data()"
       ]
     },
     {
