--- a/botorch_examples/closed_loop_botorch_only.ipynb
+++ b/botorch_examples/closed_loop_botorch_only.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -119,50 +119,32 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "train_x\n",
             "torch.Size([10, 6])\n",
-            "torch.Size([10, 1])\n"
+            "tensor([[0.3899, 0.2787, 0.6937, 0.2059, 0.7977, 0.2046],\n",
+            "        [0.9671, 0.0205, 0.7629, 0.2197, 0.8095, 0.6815],\n",
+            "        [0.1589, 0.7026, 0.0039, 0.4795, 0.2753, 0.2724],\n",
+            "        [0.5993, 0.5976, 0.0058, 0.1367, 0.0178, 0.3234],\n",
+            "        [0.0349, 0.7014, 0.7502, 0.4365, 0.4916, 0.3202],\n",
+            "        [0.0163, 0.1972, 0.3557, 0.7824, 0.7480, 0.4955],\n",
+            "        [0.2500, 0.0705, 0.2648, 0.5463, 0.0884, 0.2697],\n",
+            "        [0.2946, 0.0565, 0.0191, 0.8582, 0.4937, 0.0185],\n",
+            "        [0.7558, 0.3013, 0.6555, 0.1719, 0.1343, 0.8780],\n",
+            "        [0.0697, 0.2026, 0.5225, 0.2762, 0.6594, 0.7050]], device='cuda:0',\n",
+            "       dtype=torch.float64)\n",
+            "exact_obj\n",
+            "torch.Size([10, 1])\n",
+            "tensor([[0.1313],\n",
+            "        [0.0067],\n",
+            "        [0.5210],\n",
+            "        [0.1017],\n",
+            "        [0.2334],\n",
+            "        [0.0574],\n",
+            "        [0.2105],\n",
+            "        [0.0065],\n",
+            "        [0.8881],\n",
+            "        [0.9361]], device='cuda:0', dtype=torch.float64)\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "(tensor([[0.1616, 0.1947, 0.1982, 0.1060, 0.1460, 0.2284],\n",
-              "         [0.3239, 0.4909, 0.1419, 0.0535, 0.3530, 0.4780],\n",
-              "         [0.7939, 0.6577, 0.9102, 0.2894, 0.3113, 0.1051],\n",
-              "         [0.7673, 0.7687, 0.0898, 0.3499, 0.7251, 0.9810],\n",
-              "         [0.3363, 0.5822, 0.2294, 0.7508, 0.2236, 0.3330],\n",
-              "         [0.1278, 0.9441, 0.5743, 0.4374, 0.2045, 0.6184],\n",
-              "         [0.7431, 0.7622, 0.3138, 0.5811, 0.3623, 0.1494],\n",
-              "         [0.9689, 0.3460, 0.8791, 0.1136, 0.4456, 0.8762],\n",
-              "         [0.4442, 0.3479, 0.6486, 0.6569, 0.5947, 0.9319],\n",
-              "         [0.9993, 0.7964, 0.2331, 0.8706, 0.6913, 0.1228]], device='cuda:0',\n",
-              "        dtype=torch.float64),\n",
-              " tensor([[ 0.3867],\n",
-              "         [ 0.5505],\n",
-              "         [ 0.4715],\n",
-              "         [-0.0277],\n",
-              "         [ 0.3916],\n",
-              "         [ 0.0080],\n",
-              "         [ 0.2249],\n",
-              "         [ 0.8757],\n",
-              "         [ 0.5221],\n",
-              "         [-0.3602]], device='cuda:0', dtype=torch.float64),\n",
-              " tensor([[-1.9994],\n",
-              "         [-1.5148],\n",
-              "         [-0.1984],\n",
-              "         [ 0.3699],\n",
-              "         [-0.4807],\n",
-              "         [-0.7470],\n",
-              "         [ 0.0948],\n",
-              "         [-0.3413],\n",
-              "         [ 1.0600],\n",
-              "         [ 0.6679]], device='cuda:0', dtype=torch.float64),\n",
-              " 0.7687477919897526)"
-            ]
-          },
-          "execution_count": 4,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -176,9 +158,13 @@
         "def generate_initial_data(n=10):\n",
         "    # generate training data\n",
         "    train_x = torch.rand(10, 6, device=device, dtype=dtype)\n",
+        "    print(\"train_x\")\n",
         "    print(train_x.shape)\n",
+        "    print(train_x)\n",
         "    exact_obj = neg_hartmann6(train_x).unsqueeze(-1)  # add output dimension\n",
+        "    print(\"exact_obj\")\n",
         "    print(exact_obj.shape)\n",
+        "    print(exact_obj)\n",
         "    exact_con = outcome_constraint(train_x).unsqueeze(-1)  # add output dimension\n",
         "    train_obj = exact_obj + NOISE_SE * torch.randn_like(exact_obj)\n",
         "    train_con = exact_con + NOISE_SE * torch.randn_like(exact_con)\n",
@@ -201,7 +187,14 @@
         "    if state_dict is not None:\n",
         "        model.load_state_dict(state_dict)\n",
         "    return mll, model\n",
-        "generate_initial_data()"
+        "\n",
+        "(\n",
+        "    train_x_ei,\n",
+        "    train_obj_ei,\n",
+        "    train_con_ei,\n",
+        "    best_observed_value_ei,\n",
+        ") = generate_initial_data(n=10)\n",
+        "mll_ei, model_ei = initialize_model(train_x_ei, train_obj_ei, train_con_ei)"
       ]
     },
     {
